[gd_scene load_steps=8 format=3 uid="uid://d0yq0diuxscm4"]

[ext_resource type="Script" path="res://Objects/Scripts/obstacle_rock.gd" id="1_n2uje"]
[ext_resource type="PackedScene" uid="uid://20rbg43316vx" path="res://Util/shadow_component.tscn" id="2_0188a"]
[ext_resource type="Texture2D" uid="uid://cs2ihp7i1vha" path="res://Assets/Art/Object/RockSprites.png" id="2_yc225"]
[ext_resource type="PackedScene" uid="uid://cenya1qutm3l7" path="res://Util/HurtboxComponent.tscn" id="3_sajht"]
[ext_resource type="PackedScene" uid="uid://bshyc7o2b8stj" path="res://Util/health_component.tscn" id="4_4uqba"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_54sci"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_my1b6"]
size = Vector2(68, 68)

[node name="Obstacle_Rock" type="StaticBody2D" groups=["Obstacle"]]
collision_layer = 8
collision_mask = 7
script = ExtResource("1_n2uje")

[node name="ShadowComponent" parent="." instance=ExtResource("2_0188a")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_54sci")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_yc225")
hframes = 3
region_rect = Rect2(0, 0, 64, 64)

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="."]
radius = 80.0
affect_navigation_mesh = true
carve_navigation_mesh = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="HurtboxComponent" parent="." instance=ExtResource("3_sajht")]
collision_layer = 8
collision_mask = 5

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("RectangleShape2D_my1b6")

[node name="HealthComponent" parent="." node_paths=PackedStringArray("hurtbox") instance=ExtResource("4_4uqba")]
hurtbox = NodePath("../HurtboxComponent")
invulnerable = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
